# ao3mimic

./: .gitignore  README.md  pyproject.toml  pytest.ini
sample-content/: settings.toml
sample-content/series/: fantasy-masterworks.toml  sherlock-holmes.toml
sample-content/works/a-scandal-in-bohemia/: part-1.html  part-2.html  part-3.html  work.toml
sample-content/works/dracula/: chapter-01.html  chapter-02.html  chapter-03.html  chapter-04.html  chapter-05.html  chapter-06.html  chapter-07.html  chapter-08.html  chapter-09.html  chapter-10.html  chapter-11.html  chapter-12.html  chapter-13.html  chapter-14.html  chapter-15.html  chapter-16.html  chapter-17.html  chapter-18.html  chapter-19.html  chapter-20.html  chapter-21.html  chapter-22.html  chapter-23.html  chapter-24.html  chapter-25.html  chapter-26.html  chapter-27.html  settings.toml  work.toml
sample-content/works/elfland/: chapter-01.html  chapter-02.html  chapter-03.html  chapter-04.html  chapter-05.html  chapter-06.html  chapter-07.html  chapter-08.html  chapter-09.html  chapter-10.html  chapter-11.html  chapter-12.html  chapter-13.html  chapter-14.html  chapter-15.html  chapter-16.html  chapter-17.html  chapter-18.html  chapter-19.html  chapter-20.html  chapter-21.html  chapter-22.html  chapter-23.html  chapter-24.html  chapter-25.html  chapter-26.html  chapter-27.html  chapter-28.html  chapter-29.html  chapter-30.html  chapter-31.html  chapter-32.html  chapter-33.html  chapter-34.html  work.toml
sample-content/works/nuth/: nuth.html  work.toml
sample-content/works/the-adventure-of-the-blue-carbuncle/: the-adventure-of-the-blue-carbuncle.html  work.toml
sample-content/works/the-adventure-of-the-dancing-men/: the-adventure-of-the-dancing-men.html  work.css  work.toml
sample-content/works/the-adventure-of-the-speckled-band/: the-adventure-of-the-speckled-band.html  work.toml
sample-content/works/the-cask-of-amontillado/: the-cask-of-amontillado.html  work.toml
sample-content/works/the-redheaded-league/: the-redheaded-league.html  work.toml
sample-content/works/zenda/: chapter-01.html  chapter-02.html  chapter-03.html  chapter-04.html  chapter-05.html  chapter-06.html  chapter-07.html  chapter-08.html  chapter-09.html  chapter-10.html  chapter-11.html  chapter-12.html  chapter-13.html  chapter-14.html  chapter-15.html  chapter-16.html  chapter-17.html  chapter-18.html  chapter-19.html  chapter-20.html  chapter-21.html  chapter-22.html  work.toml
src/ao3mimic/: cli.py  exceptions.py  layout.py  models.py  normalize.py  render.py  utils.py
src/ao3mimic/branding/: styles.scss
tests/: test_utils.py
